feat: implement HTTP server configuration and add request handlers